--- a/notes/accounts/templates/navbar.html
+++ b/notes/accounts/templates/navbar.html
@@ -27,7 +27,7 @@
     <form action="{% url 'set_language' %}" method="post"
           style="background: #003153; border: none;">{% csrf_token %}
         <select name="language" onchange="this.form.submit()"
-                style="background: #003153; border: none;color: white;">
+                style="background: #003153; border: none;color: white;outline: none;">
             {% get_current_language as LANGUAGE_CODE %}
             {% get_available_languages as LANGUAGES %}
             {% get_language_info_list for LANGUAGES as languages %}
@@ -38,6 +38,11 @@
             {% endfor %}
         </select>
     </form>
+    <a href="http://25.31.176.32:8001">
+        <div class="image-container d-none d-md-block">
+            <img src={% static "img/chat.png" %} alt="Notes Image" width="30" height="30">
+        </div>
+    </a>
 
     <button class="navbar-toggler leftNavbarToggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
