--- a/notes/accounts/templates/signup.html
+++ b/notes/accounts/templates/signup.html
@@ -1,4 +1,5 @@
 {% extends 'registration_base.html' %}
+{% load static %}
 {% load i18n %}
 {% block title %}{% trans "Sign Up" %}{% endblock %}
 {% load crispy_forms_tags %}
@@ -119,8 +120,5 @@
                 </form>
             </div>
         </div>
-    </div>
-    <div class="image-container d-none d-md-block">
-        <img src="./../templates" alt="Notes Image">
     </div>
 {% endblock %}
